--- a/package.json
+++ b/package.json
@@ -9,32 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "2.9.0",
     "axios": "^1.7.2",
-    "expo": "~51.0.8",
-    "expo-camera": "~15.0.9",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.15",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.28",
+    "expo-camera": "~16.0.14",
+    "expo-constants": "~17.0.5",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
-    "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "nativewind": "^4.1.23",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.1.0",
+    "tailwindcss": "^3.4.17",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^18.3.3",
     "@types/react-native": "^0.73.0",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.5.3"
   },
   "private": true
